--- a/index.html
+++ b/index.html
@@ -13,18 +13,32 @@
 <body>
 
   <header>
-    <div class="nav-top">
-
-      <nav class="nav-left">
+    <div class="bar-container">
+      <div class="bar-left">
         <i class="fas fa-globe-europe"></i> English <i class="fas fa-chevron-down"></i> <span></span> Contact Us
-      </nav>
-      <nav class="nav-right">
+      </div>
+      <div class="bar-right">
         <i class="fas fa-search"></i> <span class="button-border button">Log In</span> <span class="button">Get HubSpot Free</span>
-      </nav>
-
+      </div>
     </div>
-
   </header>
+
+
+  <nav>
+    <img src="img/logo.svg" alt="Hubspot Logo">
+
+    <ul>
+      <li>Software <i class="fas fa-chevron-down"></i></li>
+      <li>Pricing</li>
+      <li>Resources <i class="fas fa-chevron-down"></i></li>
+      <li>Partners <i class="fas fa-chevron-down"></i></li>
+      <li>About <i class="fas fa-chevron-down"></i></li>
+    </ul>
+  </nav>
+
+  <main>
+    123123
+  </main>
 
 </body>
 
