--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>HubSpot</title>
   <link rel="stylesheet" href="css/master.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
 </head>
 
@@ -15,29 +15,40 @@
   <header>
     <div class="bar-container">
       <div class="bar-left">
-        <i class="fas fa-globe-europe"></i> English <i class="fas fa-chevron-down"></i> <span></span> Contact Us
+        <i class="fas fa-globe-europe"></i> English <i class="fas fa-chevron-down"></i> <span></span> <a href="#">Contact Us</a>
       </div>
       <div class="bar-right">
-        <i class="fas fa-search"></i> <span class="button-border button">Log In</span> <span class="button">Get HubSpot Free</span>
+        <a class="fas fa-search" href="#"></a> <a href="#" class="button-border button">Log In</a> <a href="#" class="button">Get HubSpot Free</a>
       </div>
     </div>
   </header>
 
-
   <nav>
     <img src="img/logo.svg" alt="Hubspot Logo">
-
+    <a href="#"></a>
     <ul>
-      <li>Software <i class="fas fa-chevron-down"></i></li>
-      <li>Pricing</li>
-      <li>Resources <i class="fas fa-chevron-down"></i></li>
-      <li>Partners <i class="fas fa-chevron-down"></i></li>
-      <li>About <i class="fas fa-chevron-down"></i></li>
+      <li><a href="#">Software <i class="fas fa-chevron-down"></i></a></li>
+      <li><a href="#">Pricing</a></li>
+      <li><a href="#">Resources <i class="fas fa-chevron-down"></i></a></li>
+      <li><a href="#">Partners <i class="fas fa-chevron-down"></i></a></li>
+      <li><a href="#">About <i class="fas fa-chevron-down"></i></a></li>
     </ul>
   </nav>
 
   <main>
-    123123
+    <div class="hero">
+      <div class="hero-text">
+        <h1>There's a better way to grow.</h1>
+        <p>Marketing, sales, and service software that helps your business grow without compromise. Because "good for the business" should also mean "good for the customer".</p>
+        <a href="#" class="button">Get HubSpot Free</a>
+        <p>Get started with FREE tools, and upgrade as you grow.</p>
+      </div>
+      <div class="hero-text-border"></div>
+    </div>
+
+
+    <section class="main-section">
+    </section>
   </main>
 
 </body>
