--- a/index.html
+++ b/index.html
@@ -46,8 +46,31 @@
       <div class="hero-text-border"></div>
     </div>
 
-
     <section class="main-section">
+
+      <div class="cube">
+        <img src="img/Integrations_Illustration@2x.webp" alt="Cube">
+        <h2>Powerful Alone. Better Together</h2>
+        <p>HubSpot offers a full stack of software for marketing, sales and customer service, with a completely free CRM at its core. They're powerfull alone &horbar; but even better when user together.</p>
+      </div>
+
+
+      <article class="section-table">
+        123123
+
+      </article>
+
+      <article class="column-1">
+        123123
+      </article>
+      <article class="column-2">
+        123123
+      </article>
+      <article class="column-3">
+        123123
+      </article>
+
+
     </section>
   </main>
 
