--- a/index.html
+++ b/index.html
@@ -55,23 +55,76 @@
       </div>
 
 
-      <article class="section-table">
-        123123
+      <article class="row">
+        <div class="row-img">
+          <img src="img/CRM-Illustration.svg" alt="CRM Logo"><br>
+          <a class="button" href="#">Learn More</a>
+        </div>
 
+        <div class="row-text">
+          <h4>Free HubSpot CRM</h4>
+          <p>Everything you need to organize, track, and build better relationships with lead and customers. Yes, it's 100% Free. Forever.</p>
+          <h5><span>Popular Feature</span></h5>
+          <ul>
+            <li><i class="fas fa-check-circle"></i> Contact Insight</li>
+            <li><i class="fas fa-check-circle"></i> Deals</li>
+            <li><i class="fas fa-check-circle"></i> Task</li>
+          </ul>
+        </div>
       </article>
 
-      <article class="column-1">
-        123123
-      </article>
-      <article class="column-2">
-        123123
-      </article>
-      <article class="column-3">
-        123123
-      </article>
+      <div class="columns">
+        <article class="column-1">
+          <img src="img\Marketing-Hub-Free.svg" alt="Marketing Hub Logo">
+          <h4>Marketing Hub</h4>
+          <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campains at scale.</p>
+          <h5>Popular Feature</h5>
+          <ul>
+            <li><i class="fas fa-check-circle"></i> Lead Generation</li>
+            <li><i class="fas fa-check-circle"></i> Marketing Automation</li>
+            <li><i class="fas fa-check-circle"></i> Analytics</li>
+          </ul>
+          <a class="button" href="#">Learn More</a>
+        </article>
 
+        <article class="column-2">
+          <img src="img\Sales-Professional-Illustration.svg" alt="Sales Logo">
+          <h4>Sales Hub</h4>
+          <p>Time-saving sales software that helps you get deeper insights into prospect, automate the tasks you hate, and close more deals faster.</p>
+          <h5>Popular Feature</h5>
+          <ul>
+            <li><i class="fas fa-check-circle"></i> Email Tracking</li>
+            <li><i class="fas fa-check-circle"></i> Meeting Scheduling</li>
+            <li><i class="fas fa-check-circle"></i> Email Automation</li>
+          </ul>
+          <a class="button" href="#">Learn More</a>
+        </article>
+
+        <article class="column-3">
+          <img src="img\Service-Hub-Illustration.svg" alt="Service Logo">
+          <h4>Service Hub</h4>
+          <p>Customer service software that helps you connect with costumers, exceed expectations, and turn them into promoters that grow your business.</p>
+          <h5>Popular Feature</h5>
+          <ul>
+            <li><i class="fas fa-check-circle"></i> Tickets</li>
+            <li><i class="fas fa-check-circle"></i> Customer Feedback</li>
+            <li><i class="fas fa-check-circle"></i> Knowledge Base</li>
+          </ul>
+          <a class="button" href="#">Learn More</a>
+        </article>
+      </div>
+    </section>
+
+    <section class="table">
+      <div class="table-text">
+
+        <h3>Learn and grow with award-winning support and a thriving community behind you.</h3>
+        <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
+      </div>
 
     </section>
+
+
   </main>
 
 </body>
