--- a/index.html
+++ b/index.html
@@ -117,10 +117,43 @@
 
     <section class="table">
       <div class="table-text">
-
         <h3>Learn and grow with award-winning support and a thriving community behind you.</h3>
         <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
       </div>
+
+      <div class="table-body">
+        <img src="img\homepage_community_agency.svg" alt="">
+        <h4>150+</h4> <span>HubSpot user groups</span>
+      </div>
+      <div class="table-body">
+        <img src="img\homepage_community_blog.svg" alt="">
+        <h4>4.5M+</h4> <span>monthly visits</span>
+      </div>
+      <div class="table-body">
+        <img src="img\homepage_community_academy.svg" alt="">
+        <h4>155K+</h4> <span>certified professionals</span>
+      </div>
+      <div class="table-body">
+        <img src="img\homepage_community_inbound.svg" alt="">
+        <h4>21K+</h4> <span>registered attendees</span>
+      </div><br>
+      <div class="table-body">
+        <img src="img\homepage_community_connect.svg" alt="">
+        <h4>200+</h4> <span>integrations</span>
+      </div>
+      <div class="table-body">
+        <img src="img\homepage_community_globe.svg" alt="">
+        <h4>6+</h4> <span>languages</span>
+      </div>
+      <div class="table-body">
+        <img src="img\homepage_community_followers.svg" alt="">
+        <h4>2.6M+</h4> <span>social followers</span>
+      </div>
+      <div class="table-body">
+        <img src="img\growthhub-white-small-1.svg" alt="">
+        <h4>5K+</h4> <span>profiles and counting</span>
+      </div>
+
 
     </section>
 
