--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <a href="#" class="button">Get HubSpot Free</a>
         <p>Get started with FREE tools, and upgrade as you grow.</p>
       </div>
-      <div class="hero-text-border"></div>
+      <div class="hero-text--border"></div>
     </div>
 
     <section class="main-section">
@@ -56,7 +56,7 @@
 
 
       <article class="row">
-        <div class="row-img">
+        <div class="row__img">
           <img src="img/CRM-Illustration.svg" alt="CRM Logo"><br>
           <a class="button" href="#">Learn More</a>
         </div>
@@ -116,46 +116,75 @@
     </section>
 
     <section class="table">
-      <div class="table-text">
+      <div class="table__text">
         <h3>Learn and grow with award-winning support and a thriving community behind you.</h3>
         <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
       </div>
 
       <div class="table-body">
-        <img src="img\homepage_community_agency.svg" alt="">
+        <img src="img\homepage_community_agency.svg" alt="Groups Logo">
         <h4>150+</h4> <span>HubSpot user groups</span>
       </div>
       <div class="table-body">
-        <img src="img\homepage_community_blog.svg" alt="">
+        <img src="img\homepage_community_blog.svg" alt="Blogs Logo">
         <h4>4.5M+</h4> <span>monthly visits</span>
       </div>
       <div class="table-body">
-        <img src="img\homepage_community_academy.svg" alt="">
+        <img src="img\homepage_community_academy.svg" alt="Academy Logo">
         <h4>155K+</h4> <span>certified professionals</span>
       </div>
       <div class="table-body">
-        <img src="img\homepage_community_inbound.svg" alt="">
+        <img src="img\homepage_community_inbound.svg" alt="Inbound Logo">
         <h4>21K+</h4> <span>registered attendees</span>
       </div><br>
       <div class="table-body">
-        <img src="img\homepage_community_connect.svg" alt="">
+        <img src="img\homepage_community_connect.svg" alt="HubSpot Connect Logo">
         <h4>200+</h4> <span>integrations</span>
       </div>
       <div class="table-body">
-        <img src="img\homepage_community_globe.svg" alt="">
+        <img src="img\homepage_community_globe.svg" alt="Globe Logo">
         <h4>6+</h4> <span>languages</span>
       </div>
       <div class="table-body">
-        <img src="img\homepage_community_followers.svg" alt="">
+        <img src="img\homepage_community_followers.svg" alt="Followers Logo">
         <h4>2.6M+</h4> <span>social followers</span>
       </div>
       <div class="table-body">
-        <img src="img\growthhub-white-small-1.svg" alt="">
+        <img src="img\growthhub-white-small-1.svg" alt="growHUB Logo">
         <h4>5K+</h4> <span>profiles and counting</span>
       </div>
 
-
     </section>
+
+    <section class="bot-section-a">
+      <div class="bot-section-a__text">
+        <span>64,500 <small>customers in over <strong>100</strong> countries growing their businesses with HubSpot</small></span>
+      </div>
+
+      <div class="bot-section-a__customers">
+        <img src="img\Atlassian-horizontal-blue@2x.png" alt="">
+        <img src="img\doordash_owler_20181011_194113_original@2x.png" alt="">
+        <img src="img\g2crowd-logo@2x.png" alt="">
+        <img src="img\purple-logo@2x.webp" alt=""><br>
+        <img src="img\Subaru_Logo_v2_186x63@2x.webp" alt="">
+        <img src="img\Wistia_logo@2x.webp" alt="">
+        <img src="img\Classpass-logo@2x.webp" alt="">
+        <img src="img\VMware_logo_gry_RGB_300dpi@2x.webp" alt="">
+      </div>
+    </section>
+
+    <section class="bot-section-b">
+      <div class="bot-section-b__text">
+        <h2>Start Growing With HubSpot Today</h2>
+        <p>With tools to make every part of your process more human and a support team excited to help you, getting started with inbound has never been easier.</p>
+        <a href="#" class="button">Get HubSpot Free</a>
+        <small>Get started with FREE tools, or get more with our premium software.</small>
+      </div>
+      <div class="bot-section-b__img">
+        <img src="img\woman.webp" alt="Testimonial">
+      </div>
+    </section>
+
 
 
   </main>
