--- a/index.html
+++ b/index.html
@@ -184,10 +184,74 @@
         <img src="img\woman.webp" alt="Testimonial">
       </div>
     </section>
-
-
-
   </main>
+
+  <footer>
+    <div class="footer__container">
+      <div class="footer-navbar">
+        <h5>Increase Your Traffic</h5>
+        <ul>
+          <li>Ad Software</li>
+          <li>Blog Software</li>
+          <li>SEO Software</li>
+          <li>Social Media Software</li>
+          <li>Content Management System</li>
+        </ul>
+      </div>
+      <div class="footer-navbar">
+        <h5>Connect With Leads</h5>
+        <ul>
+          <li>Find New Prospects</li>
+          <li>Email Tracking</li>
+          <li>Sales Email Templates</li>
+          <li>Click to Call Your Leads</li>
+          <li>Email Marketing</li>
+        </ul>
+      </div>
+      <div class="footer-navbar">
+        <h5>Close and Manage Leads</h5>
+        <ul>
+          <li>Document Tracking Tool</li>
+          <li>Meeting Schedule Tool</li>
+          <li>Sales Automation Tool</li>
+          <li>Lead Management Tool</li>
+          <li>Pipeline Management Tool</li>
+        </ul>
+      </div>
+      <div class="footer-navbar">
+        <h5>Support and Tools</h5>
+        <ul>
+          <li>HubSpot Partners</li>
+          <li>Join a Local User Group</li>
+          <li>Get a Free Website Report</li>
+          <li>HubSpot Templates</li>
+          <li>Free Tools & Generators</li>
+        </ul>
+        <div class="footer-socials">
+          <a target="_blank" href="#" class="button">Contact HubSpot Support</a>
+          <a target="_blank" href="https://www.facebook.com/" class="fab fa-facebook-f"></a>
+          <a target="_blank" href="https://www.instagram.com/" class="fab fa-instagram"></a>
+          <a target="_blank" href="https://www.youtube.com/" class="fab fa-youtube"></a>
+          <a target="_blank" href="https://www.twitter.com/" class="fab fa-twitter"></a>
+          <a target="_blank" href="https://www.linkedin.com/" class="fab fa-linkedin-in"></a>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer-bar">
+      <div class="footer-bar__languages">
+        <span>English</span> <span>Deutsch</span> <span>日本語</span> <span>Español</span> <span>Português</span> <span>Français</span>
+      </div>
+      <div class="footer-bar__logo">
+        <img src="img\HSLogo_gray.svg" alt="HubSpot Logo">
+        <div class="footer-bar__legal">
+          <a href="#">Legal Stuff</a>
+          <a href="#">Privacy Policy</a>
+        </div>
+        <span>Copyright &copy; 2019 HubSpot, Inc.</span>
+      </div>
+    </div>
+  </footer>
 
 </body>
 
