--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
       <div class="columns">
         <article class="column-1">
-          <img src="img\Marketing-Hub-Free.svg" alt="Marketing Hub Logo">
+          <img src="img/Marketing-Hub-Free.svg" alt="Marketing Hub Logo">
           <h4>Marketing Hub</h4>
           <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campains at scale.</p>
           <h5>Popular Feature</h5>
@@ -88,7 +88,7 @@
         </article>
 
         <article class="column-2">
-          <img src="img\Sales-Professional-Illustration.svg" alt="Sales Logo">
+          <img src="img/Sales-Professional-Illustration.svg" alt="Sales Logo">
           <h4>Sales Hub</h4>
           <p>Time-saving sales software that helps you get deeper insights into prospect, automate the tasks you hate, and close more deals faster.</p>
           <h5>Popular Feature</h5>
@@ -101,7 +101,7 @@
         </article>
 
         <article class="column-3">
-          <img src="img\Service-Hub-Illustration.svg" alt="Service Logo">
+          <img src="img/Service-Hub-Illustration.svg" alt="Service Logo">
           <h4>Service Hub</h4>
           <p>Customer service software that helps you connect with costumers, exceed expectations, and turn them into promoters that grow your business.</p>
           <h5>Popular Feature</h5>
@@ -122,35 +122,35 @@
       </div>
 
       <div class="table-body">
-        <img src="img\homepage_community_agency.svg" alt="Groups Logo">
+        <img src="img/homepage_community_agency.svg" alt="Groups Logo">
         <h4>150+</h4> <span>HubSpot user groups</span>
       </div>
       <div class="table-body">
-        <img src="img\homepage_community_blog.svg" alt="Blogs Logo">
+        <img src="img/homepage_community_blog.svg" alt="Blogs Logo">
         <h4>4.5M+</h4> <span>monthly visits</span>
       </div>
       <div class="table-body">
-        <img src="img\homepage_community_academy.svg" alt="Academy Logo">
+        <img src="img/homepage_community_academy.svg" alt="Academy Logo">
         <h4>155K+</h4> <span>certified professionals</span>
       </div>
       <div class="table-body">
-        <img src="img\homepage_community_inbound.svg" alt="Inbound Logo">
+        <img src="img/homepage_community_inbound.svg" alt="Inbound Logo">
         <h4>21K+</h4> <span>registered attendees</span>
       </div><br>
       <div class="table-body">
-        <img src="img\homepage_community_connect.svg" alt="HubSpot Connect Logo">
+        <img src="img/homepage_community_connect.svg" alt="HubSpot Connect Logo">
         <h4>200+</h4> <span>integrations</span>
       </div>
       <div class="table-body">
-        <img src="img\homepage_community_globe.svg" alt="Globe Logo">
+        <img src="img/homepage_community_globe.svg" alt="Globe Logo">
         <h4>6+</h4> <span>languages</span>
       </div>
       <div class="table-body">
-        <img src="img\homepage_community_followers.svg" alt="Followers Logo">
+        <img src="img/homepage_community_followers.svg" alt="Followers Logo">
         <h4>2.6M+</h4> <span>social followers</span>
       </div>
       <div class="table-body">
-        <img src="img\growthhub-white-small-1.svg" alt="growHUB Logo">
+        <img src="img/growthhub-white-small-1.svg" alt="growHUB Logo">
         <h4>5K+</h4> <span>profiles and counting</span>
       </div>
 
@@ -162,14 +162,14 @@
       </div>
 
       <div class="bot-section-a__customers">
-        <img src="img\Atlassian-horizontal-blue@2x.png" alt="">
-        <img src="img\doordash_owler_20181011_194113_original@2x.png" alt="">
-        <img src="img\g2crowd-logo@2x.png" alt="">
-        <img src="img\purple-logo@2x.webp" alt=""><br>
-        <img src="img\Subaru_Logo_v2_186x63@2x.webp" alt="">
-        <img src="img\Wistia_logo@2x.webp" alt="">
-        <img src="img\Classpass-logo@2x.webp" alt="">
-        <img src="img\VMware_logo_gry_RGB_300dpi@2x.webp" alt="">
+        <img src="img/Atlassian-horizontal-blue@2x.png" alt="">
+        <img src="img/doordash_owler_20181011_194113_original@2x.png" alt="">
+        <img src="img/g2crowd-logo@2x.png" alt="">
+        <img src="img/purple-logo@2x.webp" alt=""><br>
+        <img src="img/Subaru_Logo_v2_186x63@2x.webp" alt="">
+        <img src="img/Wistia_logo@2x.webp" alt="">
+        <img src="img/Classpass-logo@2x.webp" alt="">
+        <img src="img/VMware_logo_gry_RGB_300dpi@2x.webp" alt="">
       </div>
     </section>
 
@@ -181,7 +181,7 @@
         <small>Get started with FREE tools, or get more with our premium software.</small>
       </div>
       <div class="bot-section-b__img">
-        <img src="img\woman.webp" alt="Testimonial">
+        <img src="img/woman.webp" alt="Testimonial">
       </div>
     </section>
   </main>
@@ -243,7 +243,7 @@
         <span>English</span> <span>Deutsch</span> <span>日本語</span> <span>Español</span> <span>Português</span> <span>Français</span>
       </div>
       <div class="footer-bar__logo">
-        <img src="img\HSLogo_gray.svg" alt="HubSpot Logo">
+        <img src="img/HSLogo_gray.svg" alt="HubSpot Logo">
         <div class="footer-bar__legal">
           <a href="#">Legal Stuff</a>
           <a href="#">Privacy Policy</a>
