--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
     <div class="footer-bar">
       <div class="footer-bar__languages">
-        <span>English</span> <span>Deutsch</span> <span>日本語</span> <span>Español</span> <span>Português</span> <span>Français</span>
+        <a href="https://www.hubspot.com">English</a> <a href="https://www.hubspot.de">Deutsch</a> <a href="https://www.hubspot.jp">日本語</a> <a href="https://www.hubspot.es">Español</a> <a href="https://br.hubspot.com">Português</a> <a href="https://www.hubspot.fr">Français</a>
       </div>
       <div class="footer-bar__logo">
         <img src="img/HSLogo_gray.svg" alt="HubSpot Logo">
